[gd_scene load_steps=7 format=2]

[ext_resource path="res://ball/ball/ball.gd" type="Script" id=1]
[ext_resource path="res://ball/ball/ball.material" type="Material" id=2]
[ext_resource path="res://ball/ball/pool_ball.mesh" type="ArrayMesh" id=3]

[sub_resource type="SphereShape" id=1]
radius = 1.13

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.2
bounce = 0.9

[sub_resource type="CircleShape2D" id=3]
radius = 1.0

[node name="Ball" type="RigidBody"]
collision_mask = 5
mode = 1
mass = 10.0
gravity_scale = 50.0
script = ExtResource( 1 )

[node name="CollisionSphere" type="CollisionShape" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="BallMesh" type="MeshInstance" parent="."]
material_override = ExtResource( 2 )
mesh = ExtResource( 3 )
material/0 = null

[node name="BallSimulator" type="RigidBody2D" parent="."]
mode = 2
physics_material_override = SubResource( 2 )
contacts_reported = 10
contact_monitor = true
sleeping = true

[node name="CircleShape" type="CollisionShape2D" parent="BallSimulator"]
shape = SubResource( 3 )
